# deduction-autopsy

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: tests.yml
agents/: base.py  investigator.py  reviewer.py
cli/: _common.py  run_all.py  run_claim.py
data/: sku_uom_conversions.json
docs/: PLAN.md  SPEC.md
mcp_server/: fixtures.py  models.py  server.py
mcp_server/tools/: document_tools.py  uom_tools.py
orchestrator/: config.py  ground_truth.py  output.py  pipeline.py
scenarios/s01_clean_shortage/: asn.json  deduction_claim.json  invoice.json  po.json  receiving_record.json
scenarios/s02_casepack_mismatch/: asn.json  deduction_claim.json  invoice.json  po.json  receiving_record.json
scenarios/s03_split_shipment/: asn_1.json  asn_2.json  deduction_claim.json  invoice.json  po.json  receiving_record.json
scenarios/s04_sequence_violation/: asn.json  deduction_claim.json  invoice.json  po.json  receiving_record.json
scenarios/s05_sku_substitution/: asn.json  deduction_claim.json  invoice.json  po.json  receiving_record.json
scenarios/s06_promo_billback/: asn.json  deduction_claim.json  invoice.json  po.json  receiving_record.json  trade_agreement.json
scenarios/s07_duplicate_claim/: asn.json  deduction_claim.json  invoice.json  po.json  prior_claim.json  receiving_record.json
scenarios/s08_reviewer_overturn/: asn.json  deduction_claim.json  invoice.json  po.json  prior_claim.json  receiving_record.json
tests/: agent_stubs.py  test_agents_base.py  test_agents_investigator.py  test_agents_reviewer.py  test_cli_run_all.py  test_cli_run_claim.py  test_document_tools.py  test_fixtures.py  test_logging.py  test_orchestrator_config.py  test_orchestrator_output.py  test_orchestrator_pipeline.py  test_pipeline_scenarios.py  test_prompt_injection.py  test_server.py  test_uom_tools.py
