[project]
name = "deduction-autopsy"
version = "0.1.0"
description = "Two-agent reconciliation system for CPG retailer deduction claims"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "fastmcp",
    "pydantic>=2",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_server*", "agents*", "orchestrator*", "cli*"]
