[project]
name = "deduction-autopsy"
version = "0.1.0"
description = "Two-agent reconciliation system for CPG retailer deduction claims"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "fastmcp",
    "pydantic>=2",
    "rich",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: hits the real OpenRouter API (costs money, takes time); run explicitly with -m integration",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_server*", "agents*", "orchestrator*", "cli*"]
